VYRKCATG-249: Fixed landing page header gap.

--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -1209,10 +1209,6 @@ $mobile-menu-item-button-height: 7rem;
   .breadcrumb {
     padding-top: 1rem;
   }
-
-  body.page-node-type-landing-page & {
-    padding-top: $header-height;
-  }
 }
 
 /**
